# simple_native_node_addon

./: CMakeLists.txt  LICENSE  README.md  index.js  main.cpp  package-lock.json  package.json  sonar-project.properties
.github/workflows/: build.yml  codeql.yml
addon/: CMakeLists.txt
addon/src/: addon.cpp
include/: logger.h
lib/src/: logger.cpp
